<resources>
    <string name="app_name">FirstApp</string>
    <string name="nmedia">Nmedia!</string>
    <string name="description_post_author_avatar" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Likes</string>
    <string name="description_saw">Saw</string>
    <string name="description_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="content_must_not_be_empty">Content must not be empty</string>
    <string name="edit">Edit</string>
    <string name="editing">Editing</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="title_activity_intent_handler" translatable="false">IntentHandlerActivity</string>
    <string name="new_post">new post</string>

</resources>