<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/indent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginBottom="@dimen/indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/topBarrier"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_baseline_more_vert_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:button="@drawable/like_selector"
        android:checkable="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:layout_marginEnd="@dimen/small"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_saw"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:layout_marginStart="@dimen/indent"
        android:contentDescription="@string/description_share"
        app:layout_constraintStart_toEndOf="@id/like"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        app:icon="@drawable/ic_baseline_share_24"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>


<!--    <TextView-->
<!--        android:id="@+id/countLikes"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/small"-->
<!--        app:layout_constraintStart_toEndOf="@id/like"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/like"-->
<!--        app:layout_constraintTop_toTopOf="@id/like"-->
<!--        app:layout_constraintVertical_chainStyle="spread"-->
<!--        tools:text="105" />-->

<!--    <TextView-->
<!--        android:id="@+id/countShare"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/small"-->
<!--        app:layout_constraintStart_toEndOf="@id/share"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/share"-->
<!--        app:layout_constraintTop_toTopOf="@id/share"-->
<!--        app:layout_constraintVertical_chainStyle="spread"-->
<!--        tools:text="18" />-->

<!--    <TextView-->
<!--        android:id="@+id/countSaw"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/saw"-->
<!--        app:layout_constraintTop_toTopOf="@id/saw"-->
<!--        app:layout_constraintVertical_chainStyle="spread"-->
<!--        tools:text="3500" />-->

</androidx.constraintlayout.widget.ConstraintLayout>